# rust-stm32-rtos

./: .gitignore  Cargo.toml  Embed.toml  README.md  build.rs  memory.x  rtos_features.md  struggles.txt  todo.txt
.cargo/: config.toml
asm/: led.s
src/: asm_utils.s  interupts.rs  kernel.rs  lib.rs  main.rs  registers.rs  state.rs  synchronization.rs  syscalls.rs  utils.rs
