[package]
name = "rust-stm32-helloworld"
version = "0.1.0"
edition = "2021"


[dependencies]
cortex-m-rt = "0.7.5" # this is required to build the code for the cortex m4 so that the vector table is setup and that stuff
critical-section = { version = "1.2.0", features = ["restore-state-bool"] }
rtt-target = "0.6.1"


[build-dependencies]
cc = "1.0"

